--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -27,7 +27,7 @@
                 <div class="navbar-nav">
                     <a class="nav-link active" aria-current="page" href="/">Home</a>
                     <% if (user) { %>
-                        <a class="nav-link active" aria-current="page" href="/clients">Clients</a>
+                        <a class="nav-link" href="/clients">Clients</a>
                         <a class="nav-link" href="/logout">Log Out</a>
                     <% } else { %>
                         <a class="nav-link" href="/auth/google">Log In</a>
