--- a/views/clients/show.ejs
+++ b/views/clients/show.ejs
@@ -1,11 +1,9 @@
 <%- include('../partials/header') %>
-
-
 <section>
-        <h1>Address: <%= client.address %></h1>
-        <h1>Number: <%= client.phone %></h1>
+        <h3>Address: <%= theClient.address %></h3>
+        <h3>Number: <%= theClient.phone %></h3>
 </section>
 <section>
-    <a href="/clients/edit/<%= client.id %>">Edit</a>
+    <a href="/clients/edit/<%= theClient.id %>">Edit</a>
 
 <%- include('../partials/footer') %>
