back to client for a bit

--- a/views/clients/new.ejs
+++ b/views/clients/new.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/header') %>
 
-<h2>Enter a New Customer</h2>
-<!-- <form action="/customers" method="POST">
+<h2>Enter a New Client</h2>
+<form action="/clients" method="POST">
     <label>Name:
         <input type="text" name="name">
     </label><br>
@@ -12,7 +12,7 @@
         <input type="text" name="address">
     </label><br>
     </label><br>
-    <button type="submit">Add Customer</button>
-</form> -->
+    <button type="submit">Add Client</button>
+</form>
 
 <%- include('../partials/footer') %>
