--- a/views/customers/new.ejs
+++ b/views/customers/new.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/header') %>
 
 <h2>Enter a New Customer</h2>
-<!-- <form action="/customers" method="POST">
+<form action="/customers" method="POST">
     <label>Name:
         <input type="text" name="name">
     </label><br>
@@ -13,6 +13,6 @@
     </label><br>
     </label><br>
     <button type="submit">Add Customer</button>
-</form> -->
+</form>
 
 <%- include('../partials/footer') %>
