--- a/views/customers/show.ejs
+++ b/views/customers/show.ejs
@@ -1,9 +1,8 @@
 <%- include('../partials/header') %>
 <section>
         <h3>Address: <%= customer.address %></h3>
-        <h3>Number: <%= customer.phone %></h3>
+        <h3>Phone: <%= customer.phone %></h3>
 </section>
-<section>
-    <a href="/customers/edit/<%= customer.id %>">Edit</a>
+    <a href="/customers/<%= customer.id %>/edit">Edit</a>
 
 <%- include('../partials/footer') %>
