added name property to show page

--- a/views/customers/show.ejs
+++ b/views/customers/show.ejs
@@ -1,5 +1,6 @@
 <%- include('../partials/header') %>
 <section>
+        <h3>Name: <%= customer.name %></h3>
         <h3>Address: <%= customer.address %></h3>
         <h3>Phone: <%= customer.phone %></h3>
 </section>
