--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,7 @@
 <%- include('./partials/header') %>
 
+<img class= "cat-in-field" src="https://cdn.shopify.com/s/files/1/0228/9614/8544/articles/cat-5376106_1920_1920x.jpg?v=1651304600" alt="Cat in field">
+
 
 
 
