nav bar background gradient

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -32,6 +32,7 @@
                     <% } else { %>
                         <a class="nav-link" href="/auth/google">Log In</a>
                     <% } %>
+                    <img class="cat-yarn" src="https://preview.free3d.com/img/2019/07/2162695093306263021/p56z4j3t.jpg" alt="animated cat with yarn" width="100" height="60">
                 </div>
             </div>
         </div>
