--- a/views/customers/index.ejs
+++ b/views/customers/index.ejs
@@ -1,16 +1,18 @@
 <%- include('../partials/header') %>
-<h2>Customer List</h2>
+<center>
+    <h2>Customer List</h2>
 
-<a href="/customers/new">Add a Customer</a>
+    <a href="/customers/new">Add a Customer</a>
 
-<ul>
-    <% customers.forEach(function(customer) { %>
-        <form action="/customers/<%= customer.id %>?_method=DELETE" method="POST">
-            <button type="submit">X</button>
-        </form>
-        <a href="/customers/<%= customer.id %>">
-            <%= customer.name %>
-        </a>
-    <% }); %>
-</ul>
+    <ul>
+        <% customers.forEach(function(customer) { %>
+            <form action="/customers/<%= customer.id %>?_method=DELETE" method="POST">
+                <button type="submit">X</button>
+            </form>
+            <a href="/customers/<%= customer.id %>">
+                <%= customer.name %>
+            </a>
+        <% }); %>
+    </ul>
+</center>
 <%- include('../partials/footer') %>
