--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,26 +15,35 @@
 </head>
 
 <body>
-
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Sitters for Sellem</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+          <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
+            <ul class="navbar-nav me-auto">
+              <li class="nav-item active">
+                <img class="cat-yarn" src="https://media.tenor.com/9ig9nvFLZ8gAAAAi/peach-and-goma-peachcat.gif" alt="animated cat with yarn" width="100" height="60">
+              </li>
+            </ul>
+          </div>
+          <div class="mx-auto order-0">
+            <h1 class="navbar-brand mx-auto" href="#">Sitters for Sellem</h1>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
+              <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page" href="/">Home</a>
-                    <% if (user) { %>
-                        <a class="nav-link active" aria-current="page" href="/customers">Customers</a>
-                        <a class="nav-link" href="/logout">Log Out</a>
-                    <% } else { %>
-                        <a class="nav-link" href="/auth/google">Log In</a>
-                    <% } %>
-                    <img class="cat-yarn" src="https://preview.free3d.com/img/2019/07/2162695093306263021/p56z4j3t.jpg" alt="animated cat with yarn" width="100" height="60">
-                </div>
-            </div>
+          </div>
+          <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="/">Home</a>
+              </li>
+              <% if (user) { %>
+                <a class="nav-link" href="/customers">Customers</a>
+                <a class="nav-link" href="/logout">Log Out</a>
+              <% } else { %>
+                <a class="nav-link" href="/auth/google">Log In</a>
+              <% } %>
+              </li>
+            </ul>
+          </div>
         </div>
     </nav>
 
