--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,17 +15,20 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-md navbar-dark">
         <div class="container-fluid">
           <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
             <ul class="navbar-nav me-auto">
               <li class="nav-item active">
-                <img class="cat-yarn" src="https://media.tenor.com/9ig9nvFLZ8gAAAAi/peach-and-goma-peachcat.gif" alt="animated cat with yarn" width="100" height="60">
+                <div class="sitters-and-cat-gif">
+                    <h1 class="navbar-brand mx-auto" href="#">Sitters for Sellem</h1>
+                    <img class="cat-yarn" src="https://media.tenor.com/9ig9nvFLZ8gAAAAi/peach-and-goma-peachcat.gif" alt="animated cat with yarn" width="100" height="60">
+                </div>
               </li>
             </ul>
           </div>
           <div class="mx-auto order-0">
-            <h1 class="navbar-brand mx-auto" href="#">Sitters for Sellem</h1>
+    
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
               <span class="navbar-toggler-icon"></span>
             </button>
