--- a/views/customers/index.ejs
+++ b/views/customers/index.ejs
@@ -1,5 +1,5 @@
 <%- include('../partials/header') %>
-<div class="container text-center">
+<div class="container text-center my-5">
     <div class="row justify-content-center">
         <div class="col-md-6">
             <table class="table table-wrapper">
