--- a/views/customers/index.ejs
+++ b/views/customers/index.ejs
@@ -1,36 +1,39 @@
 <%- include('../partials/header') %>
+<body class="body-customer-index">
 <div class="container text-center my-5">
     <div class="row justify-content-center">
         <div class="col-md-6">
-            <table class="table table-wrapper">
-                <thead>
-                    <tr>
-                        <th>Customer Name</th>
-                        <th></th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <% customers.forEach(function(customer) { %>
-                    <tr>
-                        <td class="col col-sm-6">
-                            <a href="/customers/<%= customer.id %>">
-                                <%= customer.name %>
-                            </a>
-                        </td>
-                        <td class="col col-sm-6">
-                            <form action="/customers/<%= customer.id %>?_method=DELETE" method="POST">
-                                <button type="submit" class="btn btn-danger">X</button>
-                            </form>
-                        </td>
-                    </tr>
-                    <% }); %>
-                </tbody>
-            </table>
+            <div class="panel panel-default">
+                <table class="table table-wrapper table-striped">
+                    <thead>
+                        <tr>
+                            <th>Customer Name</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <% customers.forEach(function(customer) { %>
+                        <tr>
+                            <td class="col col-sm-6">
+                                <a href="/customers/<%= customer.id %>">
+                                    <%= customer.name %>
+                                </a>
+                            </td>
+                            <td class="col col-sm-6">
+                                <form action="/customers/<%= customer.id %>?_method=DELETE" method="POST">
+                                    <button type="submit" class="btn btn-danger">X</button>
+                                </form>
+                            </td>
+                        </tr>
+                        <% }); %>
+                    </tbody>
+                </table>
+            </div>
             <a href="/customers/new">Add a Customer</a>
         </div>
     </div>
 </div>
-
+</body>
 
 
 <%- include('../partials/footer') %>
