--- a/views/customers/new.ejs
+++ b/views/customers/new.ejs
@@ -1,18 +1,37 @@
 <%- include('../partials/header') %>
-
-<h2>Enter a New Customer</h2>
-<form action="/customers" method="POST">
-    <label>Name:
-        <input type="text" name="name">
-    </label><br>
-    <label>Phone:
-        <input type="number" name="phone">
-    </label><br>
-    <label>Address:
-        <input type="text" name="address">
-    </label><br>
-    </label><br>
-    <button type="submit">Add Customer</button>
-</form>
+<!-- <div class="d-flex justify-content-center flex-column align-items-center mt-5">
+    <h2>Enter a New Customer</h2>
+    <form action="/customers" method="POST">
+        <br><label>Name:
+            <input type="text" name="name">
+        </label><br>
+        <br><label>Phone:
+            <input type="number" name="phone">
+        </label><br>
+        <br><label>Address:
+            <input type="text" name="address">
+        </label><br>
+        <br><button type="submit">Add Customer</button>
+    </form>
+</div> -->
+<body class="body-customer-new"></body>
+<div class="d-flex justify-content-center flex-column align-items-center mt-5">
+    <h2>Enter a New Customer</h2>
+    <form action="/customers" method="POST">
+        <div class="form-floating mb-3">
+            <input type="text" class="form-control w-100" id="name" name="name" placeholder=" ">
+            <label for="name">Name</label>
+        </div>
+        <div class="form-floating mb-3">
+            <input type="number" class="form-control w-100" id="phone" name="phone" placeholder=" ">
+            <label for="phone">Phone</label>
+        </div>
+        <div class="form-floating mb-3">
+            <input type="text" class="form-control w-100" id="address" name="address" placeholder=" ">
+            <label for="address">Address</label>
+        </div>
+        <div class="text-center"><button type="submit" class="btn btn-custom">Add Customer</button></div>
+    </form>
+</div>
 
 <%- include('../partials/footer') %>
