full CRUD on customers by userid and styling

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -36,3 +36,8 @@
   border-color: #af5ca9;
   color: #ffffff;
 }
+.edit-customer-link {
+  color: white;
+  text-decoration: none;
+  border-color: #af5ca9;
+}
