--- a/views/customers/show.ejs
+++ b/views/customers/show.ejs
@@ -49,7 +49,7 @@
                     <td><%= cat.name %></td>
                     <td><%= cat.dob %></td>
                     <td>
-                      <form action="/<%= customer.id %>/<%= cat.id %>?_method=DELETE" method="POST">
+                      <form action="/cats/<%= customer.id %>/<%= cat.id %>?_method=DELETE" method="POST">
                         <button type="submit" class="btn btn-danger">Delete</button>
                       </form>
                     </td>
@@ -64,7 +64,7 @@
           </table>
 
 
-        <form action="/<%= customer.id %>" method="POST">
+        <form action="/cats/<%= customer[0].id %>" method="POST">
             Name: <input type="text" name="name">
             Date of Birth: <input type="date" name="dob">
             <button type="submit">Add Cat</button>
