--- a/views/customers/index.ejs
+++ b/views/customers/index.ejs
@@ -29,11 +29,9 @@
                     </tbody>
                 </table>
             </div>
-            <button type="submit" class="customer-button rounded"> <a class="add-customer-link" href="/customers/new"> Add a Customer</a></button>
+            <button type="submit" class="btn btn-custom"> <a class="add-customer-link" href="/customers/new"> Add a Customer</a></button>
         </div>
     </div>
 </div>
 </body>
-
-
 <%- include('../partials/footer') %>
