--- a/views/customers/new.ejs
+++ b/views/customers/new.ejs
@@ -1,19 +1,4 @@
 <%- include('../partials/header') %>
-<!-- <div class="d-flex justify-content-center flex-column align-items-center mt-5">
-    <h2>Enter a New Customer</h2>
-    <form action="/customers" method="POST">
-        <br><label>Name:
-            <input type="text" name="name">
-        </label><br>
-        <br><label>Phone:
-            <input type="number" name="phone">
-        </label><br>
-        <br><label>Address:
-            <input type="text" name="address">
-        </label><br>
-        <br><button type="submit">Add Customer</button>
-    </form>
-</div> -->
 <body class="body-customer-new"></body>
 <div class="d-flex justify-content-center flex-column align-items-center mt-5">
     <h2>Enter a New Customer</h2>
@@ -30,8 +15,7 @@
             <input type="text" class="form-control w-100" id="address" name="address" placeholder=" ">
             <label for="address">Address</label>
         </div>
-        <div class="text-center"><button type="submit" class="btn btn-custom">Add Customer</button></div>
+        <div class="text-center"><button type="submit" class="btn btn-custom">Save Customer</button></div>
     </form>
 </div>
-
 <%- include('../partials/footer') %>
