round edges on tables, center tables, and margin 5 from nav bar for all pages

--- a/views/customers/new.ejs
+++ b/views/customers/new.ejs
@@ -1,6 +1,6 @@
 <%- include('../partials/header') %>
 <body class="body-customer-new"></body>
-<div class="d-flex justify-content-center flex-column align-items-center mt-5">
+<div class="d-flex justify-content-center flex-column align-items-center mt-5 my-5">
     <h2>Enter a New Customer</h2>
     <form action="/customers" method="POST">
         <div class="form-floating mb-3">
