--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -21,7 +21,7 @@
             <ul class="navbar-nav me-auto">
               <li class="nav-item active">
                 <div class="sitters-and-cat-gif">
-                    <h1 class="navbar-brand mx-auto" href="#">Sitters for Sellem</h1>
+                    <h1 class="navbar-brand mx-auto" href="#">Sellem Sitters</h1>
                     <img class="cat-yarn" src="https://media.tenor.com/9ig9nvFLZ8gAAAAi/peach-and-goma-peachcat.gif" alt="animated cat with yarn" width="100" height="60">
                 </div>
               </li>
