--- a/views/customers/index.ejs
+++ b/views/customers/index.ejs
@@ -4,7 +4,7 @@
     <div class="row justify-content-center">
         <div class="col-md-6">
             <div class="panel panel-default">
-                <table class="table table-wrapper table-striped">
+                <table class="table table-wrapper table-striped table-rounded rounded-4 overflow-hidden">
                     <thead>
                         <tr>
                             <th>Customer Name</th>
