--- a/views/customers/show.ejs
+++ b/views/customers/show.ejs
@@ -1,7 +1,8 @@
 <%- include('../partials/header') %>
 <body class="show-page"></body>
 <section>
-  <table class="table my-4" style="border-collapse: collapse; border: solid black 1px; border-radius: 10px; width: 50%;">
+  <center>
+  <table class="table my-5 table-rounded rounded-4 overflow-hidden" style="border-collapse: collapse; border: solid black 1px; border-radius: 10px; width: 50%;">
     <thead>
       <tr>
         <th>Name</th>
@@ -19,25 +20,7 @@
       </tr>
     </tbody>
   </table>
-  
-        <!-- <h3>Cats:
-        </h3>
-        <ul>
-            <% if (customer[0].cats) {%>
-                <% customer[0].cats.forEach(function(cat) { %>
-                    <li>
-                        <%= cat.name %>
-                        <%= cat.dob %>
-                        <form action="/<%= customer.id %>/<%= cat.id %>?_method=DELETE" method="POST">
-                            <button type="submit">X</button>
-                        </form>
-                    </li>
-                <% }); %>    
-            <% } else { %>
-                <h3>No Cats Yet</h3>
-            <% } %>
-        </ul> -->
-        <table class="table">
+        <table class="table table-rounded rounded-4 overflow-hidden w-50">
             <thead>
               <tr>
                 <th>Name</th>
@@ -65,7 +48,7 @@
               <% } %>
             </tbody>
           </table>
-
+        </center>
 
         <!-- <form action="/cats/<%= customer[0].id %>" method="POST">
             Name: <input type="text" name="name">
