--- a/views/customers/new.ejs
+++ b/views/customers/new.ejs
@@ -1,9 +1,8 @@
 <%- include('../partials/header') %>
-<body class="body-customer-new"></body>
 <div class="d-flex justify-content-center flex-column align-items-center mt-5 my-5">
     <h3>Enter a New Customer</h3>
     <form action="/customers" method="POST">
-        <div class="form-floating mb-3">
+        <div class="form-floating mb-3 form-input">
             <input type="text" class="form-control w-100" id="name" name="name" placeholder=" ">
             <label for="name">Name</label>
         </div>
