--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,16 @@
 <%- include('./partials/header') %>
-<img class= "cat-in-field" src="https://cdn.shopify.com/s/files/1/0228/9614/8544/articles/cat-5376106_1920_1920x.jpg?v=1651304600" alt="Cat in field">
+<!-- <div class="bg-image has-bg-img">
+    <img class="bg-img" src="https://cdn.shopify.com/s/files/1/0228/9614/8544/articles/cat-5376106_1920_1920x.jpg?v=1651304600" alt="Cat in field">
+    <div class="container">
+    </div>
+  </div> -->
+
+<body class="home-page">
+    <h2>
+        <center>
+        <div class="welcome my-5">Welcome To Sellem Sitters</div>
+        </center>
+    </h2>
+</body>
+
 <%- include('./partials/footer') %>
