--- a/views/customers/index.ejs
+++ b/views/customers/index.ejs
@@ -1,10 +1,9 @@
 <%- include('../partials/header') %>
-<body class="body-customer-index">
 <div class="container text-center my-5">
     <div class="row justify-content-center">
         <div class="col-md-6">
             <div class="panel panel-default">
-                <table class="table table-wrapper table-striped table-rounded rounded-4 overflow-hidden">
+                <table class="table table-wrapper table-striped table-rounded rounded-4 overflow-hidden table-hover">
                     <thead>
                         <tr>
                             <th>Customer Name</th>
@@ -21,7 +20,7 @@
                             </td>
                             <td class="col col-sm-6">
                                 <form action="/customers/<%= customer.id %>?_method=DELETE" method="POST">
-                                    <button type="submit" class="btn btn-danger">X</button>
+                                    <button type="submit" class="btn btn-danger float-end">X</button>
                                 </form>
                             </td>
                         </tr>
