--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,18 +10,21 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"
         defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@800&family=Ysabeau:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/stylesheets/style.css" />
     <title></title>
 </head>
 
-<body>
+<body class="body-in-header">
     <nav class="navbar navbar-expand-md navbar-dark">
         <div class="container-fluid">
           <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
             <ul class="navbar-nav me-auto">
               <li class="nav-item active">
                 <div class="sitters-and-cat-gif">
-                    <h1 class="navbar-brand mx-auto" href="#">Sellem Sitters</h1>
+                    <h1 class="navbar-brand d-flex align-items-center" href="#">Sellem Sitters</h1>
                     <img class="cat-yarn" src="https://media.tenor.com/9ig9nvFLZ8gAAAAi/peach-and-goma-peachcat.gif" alt="animated cat with yarn" width="100" height="60">
                 </div>
               </li>
@@ -50,4 +53,4 @@
         </div>
     </nav>
 
-    <main>
+    <main class="main">
