--- a/views/customers/show.ejs
+++ b/views/customers/show.ejs
@@ -1,7 +1,8 @@
 <%- include('../partials/header') %>
 <section>
   <center>
-  <table class="table my-5 table-rounded rounded-4 overflow-hidden" style="border-collapse: collapse; border: solid black 1px; border-radius: 10px; width: 50%;">
+    <h3 class="mt-5">Details</h3>
+  <table class="table table-rounded rounded-4 overflow-hidden mb-0 pb-0" style="border-collapse: collapse; border: solid black 1px; border-radius: 10px; width: 50%;"" style="border-collapse: collapse; border: solid black 1px; border-radius: 10px; width: 50%;">
     <thead>
       <tr>
         <th>Customer Name</th>
