--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,16 +1,15 @@
 <%- include('./partials/header') %>
-<!-- <div class="bg-image has-bg-img">
-    <img class="bg-img" src="https://cdn.shopify.com/s/files/1/0228/9614/8544/articles/cat-5376106_1920_1920x.jpg?v=1651304600" alt="Cat in field">
-    <div class="container">
-    </div>
-  </div> -->
-
 <body class="home-page">
-    <h2>
-        <center>
-        <div class="welcome my-5">Welcome To Sellem Sitters</div>
-        </center>
-    </h2>
+    <center>
+        <h1>
+            <div class="welcome my-5 mb-4">Welcome To Sellem Sitters</div>
+        </h1>
+        <h3>
+            Use this app to keep track of all the people you cat-sit for.<br> Add their addresses and how many cat each person has!
+        </h3>
+        <img class="home-page-image my-4" src="https://cdn.shopify.com/s/files/1/0228/9614/8544/articles/cat-5376106_1920_1920x.jpg?v=1651304600" alt="Cat in field">
+ 
+    </center>
 </body>
 
 <%- include('./partials/footer') %>
